--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="container background-red">
-        <!-- Menu in alto a destra fisso -->
-        <header>
+        <!-- Menu in alto a destra  -->
+        <header class="header header-red">
             <nav class="clearfix">
                 <li> <a href="#convers">1</a></li>
                 <li> <a href="#tommy">2</a></li>
@@ -24,7 +24,15 @@
         </section>
     </div>
 
-    <div class="container background-green">       
+    <div class="container background-green"> 
+        <!-- Menu in alto a destra  -->
+        <header class="header header-green">
+            <nav class="clearfix">
+                <li> <a href="#convers">1</a></li>
+                <li> <a href="#tommy">2</a></li>
+                <li> <a href="#convers-alte">3</a></li>
+            </nav>
+        </header>      
         <!-- Prodotti in evidenza a tutto schermo  -->
         <section>
             <div id="tommy" class="shoes img-shoes-2"></div>
@@ -33,6 +41,14 @@
     </div>
 
     <div class="container background-yellow">
+        <!-- Menu in alto a destra  -->
+        <header class="header header-yeallow">
+            <nav class="clearfix">
+                <li> <a href="#convers">1</a></li>
+                <li> <a href="#tommy">2</a></li>
+                <li> <a href="#convers-alte">3</a></li>
+            </nav>
+        </header> 
         <!-- Prodotti in evidenza a tutto schermo  -->
         <section>
             <div id="convers-alte" class="shoes img-shoes-3"></div>
